--- a/index.html
+++ b/index.html
@@ -27,33 +27,33 @@
                 <table>
                     <thead>
                         <tr>
-                            <td class="table-name">Base</td>
+                            <td class="table-name">BASE</td>
                             <td class="table-data">Stats</td>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="table-name">HP</td>
+                            <td class="table-name">HP:</td>
                             <td class="table-data" id="hp"></td>
                         </tr>
                         <tr>
-                            <td class="table-name">Attack</td>
+                            <td class="table-name">Attack:</td>
                             <td class="table-data" id="attack"></td>
                         </tr>
                         <tr>
-                            <td class="table-name">Defense</td>
+                            <td class="table-name">Defense:</td>
                             <td class="table-data" id="defense"></td>
                         </tr>
                         <tr>
-                            <td class="table-name">Special Attack</td>
+                            <td class="table-name">S.Attack:</td>
                             <td class="table-data" id="special-attack"></td>
                         </tr>
                         <tr>
-                            <td class="table-name">Special Defense</td>
+                            <td class="table-name">S.Defense:</td>
                             <td class="table-data" id="special-defense"></td>
                         </tr>
                         <tr>
-                            <td class="table-name">Speed</td>
+                            <td class="table-name">Speed:</td>
                             <td class="table-data" id="speed"></td>
                         </tr>
                     </tbody>
