--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
             </div>
         </div>
         <div class="background-elements">
-            <img class="trainer" src="./IMG/human-Photoroom.png" alt="pokemon trainer">
+            <img class="trainer" src="https://github.com/R4D1C/pokemon-api/blob/main/IMG/human-Photoroom.png?raw=true" alt="pokemon trainer">
+            
         </div>
     </div>
     <script src="./script.js">
