--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="background">
         <div class="mainContainer">
             <div class="searchContainer">
-                <input id="search-input" type="text">
+                <input id="search-input" type="text" required>
                 <button id="search-button">Search</button>
             </div>
             <div class="result-container">
